# leipoa

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: Linux.yml
lib/: CMakeLists.txt
lib/android_openssl/: .gitignore  CMakeLists.txt  README.md
lib/public/: CMakeLists-OpenSSL.txt  CMakeLists-QtMqtt.txt  README.md
lib/public/QtMqtt/: copy.sh
lib/public/android_openssl/: CMakeLists.txt  README.md  arch.lst  run.sh
ui-qml/: CMakeLists.txt
ui-qml/src/: main.cpp  qmlaes.cpp  qmlaes.h
ui-qml/views/: main.qml
